# pushkind-auth

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  SPEC.md  config.example.yaml  config.yaml  diesel.toml  pushkind-auth.service
.github/workflows/: deploy_dev.yml  test_pr.yml
config/: default.yaml  local.yaml  prod.yaml
frontend/: knip.json  package-lock.json  package.json  ts-prunerc.json  tsconfig.json  vite.config.ts
frontend/app/: index-admin.html  index-basic.html
frontend/auth/: signin.html  signup.html
frontend/src/components/: AppShell.tsx  AuthModalFlashShell.tsx  AuthNavbar.tsx  AuthShell.tsx  AuthShellFatalState.tsx  DropdownMultiSelect.test.tsx  DropdownMultiSelect.tsx  Navigation.tsx  UserMenuDropdown.tsx
frontend/src/entries/: auth-signin.tsx  auth-signup.tsx  main-admin.tsx  main-basic.tsx
frontend/src/lib/: api.test.ts  api.ts  auth.test.ts  auth.ts  loadBootstrap.tsx  models.ts  readBootstrap.ts  redirect.ts  useAuthShell.ts
frontend/src/pages/: AuthSigninPage.tsx  AuthSignupPage.tsx  MainAdminPage.tsx  MainBasicPage.tsx
frontend/src/styles/: shell.css
migrations/2025-05-02-192454_create_hubs_and_users/: down.sql  up.sql
migrations/2025-05-02-193400_create_roles/: down.sql  up.sql
migrations/2025-06-25-105748_create_menu/: down.sql  up.sql
migrations/2025-07-11-092621_create_users_fts/: down.sql  up.sql
migrations/2026-01-14-180351_add_missing_indexes/: down.sql  up.sql
plans/: e2e-user-stories.md  form-validation-message-ownership.md  generic-page-data-apis.md  react-frontend-migration.md  shared-shell-architecture-alignment.md  user-dropdown-ordering.md  vite-static-frontend.md
spec/decisions/: 0001-react-islands-frontend.md  0002-vite-static-frontend-documents.md  0003-generic-page-data-apis.md
spec/features/: react-frontend-migration.md
specs/decisions/: 0002-vite-static-frontend-documents.md
specs/features/: e2e-user-stories.md  form-validation-message-ownership.md  generic-page-data-apis.md  react-frontend-migration.md  shared-shell-architecture-alignment.md  user-dropdown-ordering.md  vite-static-frontend.md
src/: db.rs  error_conversions.rs  frontend.rs  lib.rs  main.rs  middleware.rs  schema.rs
src/domain/: hub.rs  menu.rs  mod.rs  role.rs  types.rs  user.rs
src/dto/: admin.rs  api.rs  auth.rs  frontend.rs  main.rs  mod.rs
src/forms/: auth.rs  main.rs  mod.rs
src/models/: auth.rs  config.rs  hub.rs  menu.rs  mod.rs  role.rs  user.rs
src/repository/: errors.rs  hub.rs  menu.rs  mock.rs  mod.rs  role.rs  test.rs  user.rs
src/routes/: admin.rs  api.rs  auth.rs  main.rs  mod.rs
src/services/: admin.rs  api.rs  auth.rs  errors.rs  main.rs  mod.rs
templates/: base.html  navigation.html
templates/auth/: login.html  register.html
templates/main/: _admin.html  _basic.html  index.html  modal_body.html
tests/: api_auth.rs  auth_signin.rs  db.rs  db_test.rs  e2e.rs  forms.rs  middleware.rs  models_auth.rs  models_user.rs  repository.rs  repository_hub_test.rs  repository_role_test.rs  repository_user_test.rs  routes.rs  services.rs
tests/common/: mod.rs
