[package]
name = "pushkind-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.226", features = ["derive"] }
diesel = { version = "2.3.4", features = [
    "sqlite",
    "r2d2",
    "chrono",
    "returning_clauses_for_sqlite_3_35",
] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.28"
actix-web = "4.12.1"
tera = { version = "1.20.1", features = ["builtins"] }
actix-session = { version = "0.11.0", features = ["cookie-session"] }
actix-identity = "0.9.0"
futures-util = "0.3.31"
actix-web-flash-messages = { version = "0.5.0", features = ["cookies"] }
bcrypt = "0.17.1"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
thiserror = "2.0.17"
serde_html_form = "0.2.8"
actix-cors = "0.7.1"
validator = { version = "0.20.0", features = ["derive"] }
url = "2.5.7"
pushkind-common = { git = "https://github.com/pushkindt/pushkind-common.git", branch = "main", features = [
    "db",
    "actix",
    "zeromq",
    "emailer",
] }
config = "0.15.19"


[dev-dependencies]
diesel_migrations = "2.3.1"
mockall = "0.14.0"
