[package]
name = "pushkind-auth"
version = "0.1.0"
edition = "2024"

[features]
default = ["server"]
data = [
    "dep:bcrypt",
    "dep:chrono",
    "dep:diesel",
    "dep:pushkind-common",
    "dep:serde",
    "dep:thiserror",
    "dep:validator",
]
server = [
    "data",
    "dep:actix-cors",
    "dep:actix-identity",
    "dep:actix-session",
    "dep:actix-web",
    "dep:actix-web-flash-messages",
    "dep:config",
    "dep:dotenvy",
    "dep:env_logger",
    "dep:futures-util",
    "dep:jsonwebtoken",
    "dep:log",
    "dep:pushkind-emailer",
    "dep:serde_html_form",
    "dep:tera",
    "dep:url",
    "pushkind-common/actix",
    "pushkind-common/db",
    "pushkind-common/zeromq",
]

[[bin]]
name = "pushkind-auth"
path = "src/main.rs"
required-features = ["server"]

[dependencies]
chrono = { version = "0.4.42", optional = true, features = ["serde"] }
serde = { version = "1.0.226", optional = true, features = ["derive"] }
diesel = { version = "2.3.4", features = [
    "sqlite",
    "r2d2",
    "chrono",
    "returning_clauses_for_sqlite_3_35",
] , optional = true }
dotenvy = { version = "0.15.7", optional = true }
env_logger = { version = "0.11.8", optional = true }
log = { version = "0.4.29", optional = true }
actix-web = { version = "4.12.1", optional = true }
tera = { version = "1.20.1", optional = true, features = ["builtins"] }
actix-session = { version = "0.11.0", optional = true, features = ["cookie-session"] }
actix-identity = { version = "0.9.0", optional = true }
futures-util = { version = "0.3.31", optional = true }
actix-web-flash-messages = { version = "0.5.0", optional = true, features = ["cookies"] }
bcrypt = { version = "0.17.1", optional = true }
jsonwebtoken = { version = "10.2.0", optional = true, features = ["aws_lc_rs"] }
thiserror = { version = "2.0.17", optional = true }
serde_html_form = { version = "0.2.8", optional = true }
actix-cors = { version = "0.7.1", optional = true }
validator = { version = "0.20.0", optional = true, features = ["derive"] }
url = { version = "2.5.7", optional = true }
pushkind-common = { git = "https://github.com/pushkindt/pushkind-common.git", branch = "main", default-features = false, optional = true }
config = { version = "0.15.19", optional = true, default-features = false, features = ["yaml"] }
pushkind-emailer = { git = "https://github.com/pushkindt/pushkind-emailer.git", version = "0.1.0", optional = true, features = [
    "data",
] }


[dev-dependencies]
diesel_migrations = "2.3.1"
mockall = "0.14.0"
tempfile = "3.15.0"
